--- a/assets/css/templates/_team-landing.scss
+++ b/assets/css/templates/_team-landing.scss
@@ -62,9 +62,11 @@
           border: 1px solid rgba($peach, 0.4);
           bottom: 0;
           right: 0;
+          z-index: 1;
         } img {
           width: calc(100% - 1.2rem);
           height: calc(100% - 1.2rem);
+          z-index: 2;
         }
       }
     } &__info {
